ingress/ip-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ip-pod-label
  template:
    metadata:
      name: ip-pod
      labels:
        app: ip-pod-label
    spec:
      containers:
        - name: ip-container
          image: ip:0
          ports:
            - containerPort: 80
              protocol: TCP
