ingress/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test.local
      http:
        paths:
          - path: /hostname
            pathType: Prefix
            backend:
              service:
                name: hn-service
                port:
                  number: 5998
